feat: changed datastructure behind the Background Selection mechanism
