# docs/swagger.json
@@ -65,19 +65,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/StringResponse"
+                            "$ref": "#/definitions/BackgroundResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/StringResponse"
+                            "$ref": "#/definitions/BackgroundResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/StringResponse"
+                            "$ref": "#/definitions/BackgroundResponse"
                         }
                     }
                 }
@@ -816,19 +816,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/StringResponse"
+                            "$ref": "#/definitions/BackgroundResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/StringResponse"
+                            "$ref": "#/definitions/BackgroundResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/StringResponse"
+                            "$ref": "#/definitions/BackgroundResponse"
                         }
                     }
                 }
@@ -1179,6 +1179,34 @@
         }
     },
     "definitions": {
+        "BackgroundData": {
+            "type": "object",
+            "properties": {
+                "filename": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "BackgroundResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/BackgroundData"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
         "BookmarkResponse": {
             "type": "object",
             "properties": {
@@ -1584,6 +1612,9 @@
             "properties": {
                 "admin": {
                     "type": "boolean"
+                },
+                "background": {
+                    "type": "string"
                 },
                 "created_datetime": {
                     "type": "string"
